--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				学号：202022616106
 			</p>
 			<p contenteditable="false">
-				班级：电子信息
+				班级：物理电子工程学院
 			</p>
 			<p contenteditable="false">
 				开始：<span id="date1"></span> 08:00
